# modal-rust

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: cls_call.rs  echo.rs
modal_proto/: api.proto
src/: client.rs  cls.rs  lib.rs  main.rs  proto.rs  serialization.rs
